--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,28 @@
 
 
 
+body{
+    background-color: #332c2c;
+    color: white !important;
+}
+
+
+
+.white{
+    color: white !important;
+    font-size: 150% !important;
+}
+
+.booking{
+    width: 100%;
+    height: 100%;
+    background-color: red; /* Green */
+    border-width: 1em;
+    border-color: #332c2c;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 12px;
+}
